# vestibule-radio

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  package-lock.json  package.json  vite.config.js
api/: Dockerfile  connections_manager.py  main.py  models.py  player.py  pyproject.toml  store.py
api/data/: tracks.json
docs/: ARCHITECTURE.md
scraper/: .gitignore  bot.py  link_parser.py  pyproject.toml  requirements.txt
scraper/downloader/: dl_types.py  downloader.py  enhancer.py  extractor.py  genres.json  spotify.py  test_enhancer.py  test_pipeline.py  utils.py  youtube.py
scripts/: fetch_genres.py
web/: index.html  manifest.json  player.js  style.css
