[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.103.2",
    "pydantic>=2.13.4",
    "uvicorn==0.23.2",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
]
